--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t pruebahtml .
+          docker build -t prometour-html .
           docker login -u pcmalaga -p dckr_pat_j7lRhqlXGiMpyua059S6HLBLXYE
           docker tag prometour-html pcmalaga/prometour-html
           docker push pcmalaga/prometour-html
